@@ -1,0 +1,107 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+    "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html">
+  <title>Gamin the File Alteration Monitor</title>
+</head>
+
+<body style="color: #000000;background-color: #FFFFFF">
+<h1 style="text-align: center">Gamin the File Alteration Monitor</h1>
+
+<h2><a name="Overview">Overview</a></h2>
+
+<p>Gamin is a file and directory monitoring system defined to be a subset of
+the <a href="http://oss.sgi.com/projects/fam/">FAM</a> (File Alteration
+Monitor) system.</p>
+
+<p>The main goals of the project are:</p>
+<ol>
+  <li>minimize the security model of FAM, the daemon runs under the user
+    account, it is compatible with SELinux</li>
+  <li>simplify the code base, dropping some of the most exotic feature of
+  FAM</li>
+  <li>provide an API and ABI compatible replacement for FAM</li>
+  <li>try to fix some other issues like resource consumption</li>
+</ol>
+
+<p>Gamin also serves as an interface to test the inotify mechanism to improve
+the existing dnotify monitoring interface present in the Linux kernel.</p>
+
+<p>At this point Gamin is fairly tied to Linux, portability is not a primary
+goal at this point but if you have portability patches they are welcome.</p>
+
+<p>From an historical point of view, gamin builds from the marmot project
+authored by James Willcox and Corey Bowers and then heavilly modified to turn
+it into a minimalist FAM replacement (French litterate will appreciate the
+filiation from fam to marmot and gamin.)</p>
+
+<p>This library is available under the terms of the <a
+href="http://www.gnu.org/copyleft/lesser.html">GNU LIBRARY GENERAL PUBLIC
+LICENSE</a>, and a <a
+href="http://www.opensource.org/licenses/lgpl-license.php">copy</a> of it
+should be found in the source under the COPYING file.</p>
+
+<h2><a name="News">News</a></h2>
+
+<h3>0.0.7: Aug 24 2004</h3>
+<ul>
+  <li>increased the test suite</li>
+  <li>activate poll and kernel monitoring (dnotify) simultaneously</li>
+  <li>fix monitoring of resources initially missing</li>
+  <li>fix load problem due to dnotify on very busy resources</li>
+</ul>
+
+<h3>0.0.6: Aug 19 2004</h3>
+<ul>
+  <li>fix monitoring of file resources</li>
+  <li>moved gam_server to $libexec since it doesn't need to be started from
+    the command line usually</li>
+  <li>test and fixes on x86_64</li>
+  <li>removal all thread dependancies and conditional code</li>
+</ul>
+
+<h2><a name="Downloads">Downloads</a></h2>
+
+<p>You can download gamin from the GNOME project pages, either as <a
+href="http://www.gnome.org/~veillard/gamin/sources/">sources</a>, and <a
+href="http://www.gnome.org/~veillard/gamin/RPMS/">binaries</a> or <a
+href="http://www.gnome.org/~veillard/gamin/SRPMS/">source</a> RPMs.</p>
+
+<h2><a name="Developers">Developers</a> informations</h2>
+
+<p>The CVS base is in the <a href="http://www.gnome.org/">GNOME</a> project
+CVS base at cvs.gnome.org, the module name is <a
+href="http://cvs.gnome.org/viewcvs/gamin/"><strong>gamin</strong></a>. See
+the <a href="http://developer.gnome.org/tools/cvs.html">Gnome CVS Tools</a>
+page for more information on using CVS.</p>
+
+<p>We expect bug reports to be entered in <a
+href="http://bugzilla.gnome.org/buglist.cgi?product=gamin&amp;bug_status=UNCONFIRMED&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=NEEDINFO&amp;bug_status=REOPENED&amp;bug_status=RESOLVED&amp;bug_status=VERIFIED&amp;form_name=query">GNOME
+bugzilla</a> or in <a
+href="https://bugzilla.redhat.com/bugzilla/buglist.cgi?product=Fedora+Core&amp;product=Red+Hat+Enterprise+Linux&amp;component=fam&amp;component=gamin&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=REOPENED&amp;bug_status=MODIFIED&amp;short_desc_type=allwordssubstr&amp;short_desc=&amp;long_desc_type=allwordssubstr&amp;long_desc=&amp;Search=Search">Red
+Hat bugzilla</a>.</p>
+
+<h2><a name="Contacts">Contacts</a></h2>
+
+<p>The best way to contact the developers is to use the mailing-list <a
+href="http://mail.gnome.org/mailman/listinfo/gamin-list">gamin-list@gnome.org</a>.</p>
+
+<p>Before reporting a bug please double-check:</p>
+<ul>
+  <li>that you are using the <a
+    href="http://www.gnome.org/~veillard/gamin/sources/">latest
+  version</a></li>
+  <li>that the bug hasn't been reported previously in <a
+    href="http://bugzilla.gnome.org/buglist.cgi?product=gamin&amp;bug_status=UNCONFIRMED&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=NEEDINFO&amp;bug_status=REOPENED&amp;bug_status=RESOLVED&amp;bug_status=VERIFIED&amp;form_name=query">GNOME</a>
+    or <a
+    href="https://bugzilla.redhat.com/bugzilla/buglist.cgi?product=Fedora+Core&amp;product=Red+Hat+Enterprise+Linux&amp;component=fam&amp;component=gamin&amp;bug_status=NEW&amp;bug_status=ASSIGNED&amp;bug_status=REOPENED&amp;bug_status=MODIFIED&amp;short_desc_type=allwordssubstr&amp;short_desc=&amp;long_desc_type=allwordssubstr&amp;long_desc=&amp;Search=Search">Red
+    Hat</a> bugzillas.</li>
+</ul>
+
+<p>Then the best way is to log the bug in one of the bugzilla or <a
+href="http://mail.gnome.org/mailman/listinfo/gamin-list">join the list</a>
+and post there if you think that some of gamin design or code should be
+changed.</p>
+</body>
+</html>
